fix: improve alignment

--- a/06-signup-form/style.css
+++ b/06-signup-form/style.css
@@ -41,6 +41,7 @@
   justify-content: center;
   align-items: center;
   font-size: larger;
+  margin: 20px;
 }
 
 .login {
@@ -94,11 +95,20 @@ input{
 
 .submit-btn > button{
   width: auto;
-  margin-left: 25px;
   display: inline-block;
   background-color: #0e7c12; /* Green background */
   color: rgb(255, 255, 255);
   border-radius: 5px;
+}
+
+.submit-btn {
+  position: absolute;
+  top: 930px;
+}
+
+.login{
+  position: relative;
+  top: 80px;
 }
 
 .login > a:link{
